monitoring/01.deploysvc.yaml
---
# 메인페이지용 코드
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-main 
  namespace: monitoring
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      page: main 
  template: 
    metadata: 
      name: pod-main 
      labels: 
        page: main 
    spec: 
      containers: 
      - name: ctn-main
        image: nginx 
        ports: 
        - containerPort: 80 
        resources: 
          requests: 
            cpu: "250m"
---
# 메인페이지용 서비스
apiVersion: v1
kind: Service
metadata:
  name: svc-main
  namespace: monitoring
spec:
  selector:
    page: main
  ports:
  - port: 80
---
# blog 용 코드
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-blog 
  namespace: monitoring
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      page: blog
  template: 
    metadata: 
      name: pod-blog
      labels: 
        page: blog
    spec: 
      containers: 
      - name: ctn-blog
        image: tonyhan18/testweb:blue
        ports: 
        - containerPort: 80
        resources: 
          requests: 
            cpu: "250m"
---
# blog 용 서비스
apiVersion: v1
kind: Service
metadata:
  name: svc-blog
  namespace: monitoring
spec: 
  selector:
    page: blog
  ports:
  - port: 80
---
# shop 용 코드
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-shop
  namespace: monitoring
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      page: shop
  template: 
    metadata: 
      name: pod-shop
      labels: 
        page: shop
    spec: 
      containers: 
      - name: ctn-shop
        image: tonyhan18/testweb:green
        ports: 
        - containerPort: 80
        resources: 
          requests: 
            cpu: "250m"
---
# shop 용 서비스
apiVersion: v1
kind: Service
metadata:
  name: svc-shop
  namespace: monitoring
spec: 
  selector:
    page: shop
  ports:
  - port: 80
